# anxious-intelligence

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  SPEC_ORIGINAL.docx  anxious-intelligence.service  package-lock.json  package.json  pyproject.toml
migrations/: 001_initial_schema.sql  002_add_tension_shares_relation.sql  002_intelligence_metrics.sql  003_add_code_patches.sql  004_intelligence_metrics.sql  005_belief_state_log.sql
notes/: industry-comparison-audit.md  tension_investigation_belief6.md
progress/: default.jsonl  test-delegate3.jsonl
src/: __init__.py  belief_graph.py  claude.py  cli.py  code_bridge.py  config.py  db.py  dissatisfaction.py  evidence_extractor.py  models.py  orchestrator.py  prompts.py  revision_engine.py  tension_accumulator.py
src/db/: client.ts
ts/: check_db.ts  package-lock.json  package.json  tsconfig.json
ts/src/: _check_db.ts  autonomous.ts  belief-graph.ts  claude.ts  cli.ts  code-bridge.ts  config.ts  db.ts  dissatisfaction.ts  evidence-extractor.ts  logger.ts  main.ts  orchestrator.ts  progress.ts  prompts.ts  revision-engine.ts  server.ts  sub-agents.ts  subagent.ts  tension-accumulator.ts  tools.ts  types.ts
ts/src/channels/: discord.ts  telegram.ts
ts/src/dashboard/: index.html
